-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.686 2010-01-09 03:29:27 guru Exp $
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2010-01-15	pwessel
	* GMT 4.5.2 finalized and released
-----------------------------------------------------------------------------------------

2010-01-08	jluis
	* gmt_support.c:	Increase the size of the variable that contains the path to
				a CPT file and the pathname to BUFSIZ bytes.
	* surface.c:		Eliminate 2nd sort when no change in throw_away_unusables.

2010-01-07	pwessel
	* borders:		Added the Nunavut province boundary in Canada (land only)
	* grdproject.txt:	Now has better explanation for -D (same as -I in other progs)
	
2010-01-05	pwessel
	* gmt_plot.c:		Calculation of actual width of map scale in pscoast/psbasemap
				did not anticipate using -E for 3-D perspective and got
				wrong width sometimes with a negative sign.
2010-01-04	pwessel
	* spotter/grdrotater.c:	Bug in node index gave no longitudinal variation in rotated
				grid.
	* example 30 added.

2009-12-15	pwessel
	* gmtdfaults:		Added BASEMAP_TYPE = graph for linear projections to
				have the axes extended 7.5% with arrow heads.
	* psxy.c:		New (and final) symbol -Sm for math angle, which lets
				you draw a circular arc with optional curved arrow
				heads in one, both, or zero ends.
	* psxyz.c:		Same but no arrow heads yet.

2009-12-8	pwessel
	* sph/sphinterpolate.c:	Bad index on line 317 went outside array limit.
				Did not initialize the grid header properly.
	* sph/sphdistance.c:	Did not initialize the grid header properly.
	* misc/gmtstitch.c:	NULL segment headers passed to strcpy() and
				fixed output message when -C and only one segment.

2009-12-7	pwessel
	* grdtrack.c:		The -Z option gave z-values a longitude-formatting

2009-11-29	pwessel